--- a/articles/api-management/TOC.yml
+++ b/articles/api-management/TOC.yml
@@ -266,8 +266,10 @@
               href: ../service-fabric/service-fabric-tutorial-deploy-api-management.md
 - name: リファレンス
   items:
+    - name: Azure CLI
+      href: /cli/azure/apim
     - name: Azure PowerShell
-      href: /powershell/module/az.apimanagement/?view=azps-2.6.0
+      href: /powershell/module/az.apimanagement/
     - name: REST
       href: /rest/api/apimanagement/
     - name: REST (オリジナル)
@@ -277,6 +279,8 @@
     - name: Azure Policy の組み込み
       displayName: 'samples, policies, definitions'
       href: ./policy-reference.md
+    - name: リソース ログ スキーマ
+      href: gateway-log-schema-reference.md
 - name: リソース
   items:
     - name: よく寄せられる質問
