--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -36,29 +36,31 @@
       href: tutorial-virtual-network.md
     - name: 9 - 仮想マシンのバックアップ
       href: tutorial-backup-vms.md
-    - name: 10 - VM の管理
+    - name: 10 - ディザスター リカバリーの有効化
+      href: tutorial-disaster-recovery.md
+    - name: 11 - VM の管理
       href: tutorial-govern-resources.md
-    - name: 11 - VM の追跡と更新
+    - name: 12 - VM の追跡と更新
       href: tutorial-config-management.md
-    - name: 12 - VM の監視
+    - name: 13 - VM の監視
       href: tutorial-monitor.md
-    - name: 13 - VM のセキュリティの管理
+    - name: 14 - VM のセキュリティの管理
       href: tutorial-azure-security.md
-    - name: 14a - Jenkins でビルドする
+    - name: 15a - Jenkins でビルドする
       href: /azure/developer/jenkins/pipeline-with-github-and-docker
-    - name: 14b - Jenkins を Azure DevOps と統合する
+    - name: 15b - Jenkins を Azure DevOps と統合する
       href: /azure/developer/jenkins/deploy-to-linux-vm-using-azure-devops-services
-    - name: 15a - ローリング デプロイ戦略を構成する
+    - name: 16a - ローリング デプロイ戦略を構成する
       href: tutorial-devops-azure-pipelines-classic.md
-    - name: 15b - カナリア デプロイ戦略を構成する
+    - name: 16b - カナリア デプロイ戦略を構成する
       href: tutorial-azure-devops-canary-strategy.md
-    - name: 15c - ブルーグリーン デプロイ戦略を構成する
+    - name: 16c - ブルーグリーン デプロイ戦略を構成する
       href: tutorial-azure-devops-blue-green-strategy.md
-    - name: 15d - Azure Pipelines を使用した CI/CD (YAML)
+    - name: 16d - Azure Pipelines を使用した CI/CD (YAML)
       href: tutorial-build-deploy-azure-pipelines.md
-    - name: 16 - LAMP スタックの作成
+    - name: 17 - LAMP スタックの作成
       href: tutorial-lamp-stack.md
-    - name: 17 - SSL による Web サーバーのセキュリティ保護
+    - name: 18 - SSL による Web サーバーのセキュリティ保護
       href: tutorial-secure-web-server.md
 - name: サンプル
   items:
@@ -285,7 +287,7 @@
         - name: 予約インスタンス
           items:
             - name: VM の前払い
-              href: prepay-reserved-vm-instances.md
+              href: ../prepay-reserved-vm-instances.md
             - name: 専用ホストの前払い
               href: ../prepay-dedicated-hosts-reserved-instances.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
             - name: Azure の予約とは
@@ -343,7 +345,7 @@
       href: ../../virtual-machine-scale-sets/overview.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
     - name: インフラストラクチャの自動化
       href: ../infrastructure-automation.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
-    - name: Security
+    - name: セキュリティ
       items:
         - name: セキュリティとポリシー
           href: ../security-policy.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
@@ -581,7 +583,7 @@
           href: ../managed-disk-from-image-version.md
     - name: VM のセキュリティ保護
       items:
-        - name: 推奨事項
+        - name: Recommendations
           href: ../security-recommendations.md
         - name: ジャストインタイム アクセス
           href: ../../security-center/security-center-just-in-time.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
@@ -949,7 +951,7 @@
           href: /azure/architecture/topics/high-performance-computing/
         - name: IBM Db2 pureScale
           items:
-            - name: Architecture
+            - name: アーキテクチャ
               href: ibm-db2-purescale-azure.md
             - name: デプロイ
               href: deploy-ibm-db2-purescale-azure.md
