--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -618,8 +618,6 @@
                 - name: Web Apps
                   displayname: java
                   href: app/java-get-started.md
-                - name: Docker アプリ
-                  href: app/docker.md
                 - name: ログ トレース
                   href: app/java-trace-logs.md
                 - name: Unix メトリック
@@ -692,12 +690,14 @@
               href: app/kubernetes-codeless.md
             - name: スタンドアロン - 任意の環境
               items:
-                - name: Java (プレビュー)
+                - name: Java
                   items:
                     - name: 概要
                       href: app/java-in-process-agent.md
                     - name: 構成オプション
                       href: app/java-standalone-config.md
+                    - name: テレメトリ プロセッサ
+                      href: app/java-standalone-telemetry-processors.md
                     - name: JVM 引数の設定
                       href: app/java-standalone-arguments.md
             - name: オンプレミスのサーバー
@@ -1344,10 +1344,6 @@
           href: insights/azure-web-apps-analytics.md
         - name: Application Insights コネクタ
           href: platform/app-insights-connector.md
-        - name: AKS コードレスのための Application Insights
-          href: app/kubernetes.md
-        - name: Docker アプリケーションの監視
-          href: app/docker.md
         - name: OMS ポータルの廃止
           href: platform/oms-portal-transition.md
         - name: ディスク メトリックの廃止
