--- a/articles/security/benchmarks/index.yml
+++ b/articles/security/benchmarks/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.author: mbaldwin
   manager: rkarlin
   ms.date: 12/23/2019
-  ms.openlocfilehash: a9b7b40c3f79751a9d67750e428ca14cc024a47b
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: ed638f6cd90abefdf5fbeaddf21ddb3a98322c07
+  ms.sourcegitcommit: 17b36b13857f573639d19d2afb6f2aca74ae56c1
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "91328277"
+  ms.lasthandoff: 11/10/2020
+  ms.locfileid: "94409112"
 landingContent:
 - title: Azure セキュリティ ベンチマークについて
   linkLists:
@@ -61,7 +61,7 @@ landingContent:
   - linkListType: overview
     links:
     - text: Azure Databricks
-      url: ../../azure-databricks/security-baseline.md
+      url: /azure/databricks/scenarios/security-baseline
     - text: Azure Machine Learning
       url: ../../machine-learning/security-baseline.md
     - text: Cognitive Services
@@ -121,7 +121,7 @@ landingContent:
     - text: Azure Database for PostgreSQL - Hyperscale
       url: ../../postgresql/postgresql-hyperscale-security-baseline.md
     - text: Azure SQL データベース
-      url: ../../sql-database/security-baseline.md
+      url: ../../azure-sql/database/security-baseline.md
     - text: Cosmos DB
       url: ../../cosmos-db/security-baseline.md
 - title: 統合セキュリティ ベースライン
@@ -177,7 +177,7 @@ landingContent:
     - text: カスタマー ロックボックス
       url: ../fundamentals/customer-lockbox-security-baseline.md
     - text: Key Vault
-      url: ../../key-vault/security-baseline.md
+      url: ../../key-vault/general/security-baseline.md
     - text: Security Center
       url: ../../security-center/security-baseline.md
 - title: 追加のセキュリティ ベースライン
