--- a/articles/security/fundamentals/TOC.yml
+++ b/articles/security/fundamentals/TOC.yml
@@ -49,7 +49,7 @@
     - name: セキュリティ チェックリスト
       href: steps-secure-identity.md
     - name: パスワードなしの選択
-      href: ad-passwordless.md
+      href: ../../active-directory/authentication/concept-authentication-passwordless.md
 - name: ネットワークのセキュリティ
   items:
     - name: セキュリティの概要
@@ -63,7 +63,7 @@
     - name: 未解決の DNS とサブドメインの引き継ぎ
       href: subdomain-takeover.md
     - name: セキュリティ保護されたハイブリッド ネットワーク アーキテクチャ
-      href: 'https://docs.microsoft.com/azure/architecture/reference-architectures/dmz/secure-vnet-hybrid?toc=/azure/security/toc.json&bc=/azure/security/breadcrumb/toc.json'
+      href: /azure/architecture/reference-architectures/dmz/secure-vnet-hybrid?bc=%252fazure%252fsecurity%252fbreadcrumb%252ftoc.json&toc=%252fazure%252fsecurity%252ftoc.json
 - name: IaaS セキュリティ
   items:
     - name: Microsoft Antimalware
@@ -97,13 +97,13 @@
     - name: データベースのセキュリティ
       items:
         - name: 概要
-          href: ../../sql-database/sql-database-security-overview.md
+          href: ../../azure-sql/database/security-overview.md
         - name: ベスト プラクティス
-          href: ../../sql-database/sql-database-security-best-practice.md
+          href: ../../azure-sql/database/security-best-practice.md
         - name: セキュリティ チェックリスト
           href: database-security-checklist.md
     - name: Storage のセキュリティ ガイド
-      href: 'https://docs.microsoft.com/azure/storage/common/storage-security-guide?toc=/azure/security/toc.json&bc=/azure/security/breadcrumb/toc.json'
+      href: ../../storage/blobs/security-recommendations.md?bc=%252fazure%252fsecurity%252fbreadcrumb%252ftoc.json&toc=%252fazure%252fsecurity%252ftoc.json
     - name: カスタマー ロックボックス
       href: customer-lockbox-overview.md
     - name: カスタマー ロックボックスのセキュリティ ベースライン
