--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -1,5 +1,7 @@
 - name: Azure IoT Edge のドキュメント
   href: index.yml
+- name: Azure IoT Edge のバージョン
+  href: version-history.md
 - name: 概要
   items:
     - name: Azure IoT Edge について
@@ -13,13 +15,13 @@
       href: quickstart.md
 - name: チュートリアル
   items:
-    - name: 1. 開発環境をセットアップする
+    - name: 開発環境をセットアップする
       items:
         - name: Linux デバイス向けの開発
           href: tutorial-develop-for-linux.md
         - name: Windows デバイス向けの開発
           href: tutorial-develop-for-windows.md
-    - name: 2. カスタム コード モジュールの開発
+    - name: カスタム コード モジュールの開発
       items:
         - name: C
           items:
@@ -39,7 +41,7 @@
           href: tutorial-node-module.md
         - name: Python
           href: tutorial-python-module.md
-    - name: 3. Azure サービスをモジュールとしてデプロイする
+    - name: Azure サービスをモジュールとしてデプロイする
       items:
         - name: Azure Functions を使用したデータのフィルター処理
           href: tutorial-deploy-function.md
@@ -51,7 +53,11 @@
           href: tutorial-deploy-custom-vision.md
         - name: SQL を使用したローカルへのデータの格納
           href: tutorial-store-data-sql-server.md
-    - name: 4. エッジにおける機械学習のエンドツーエンドの例
+    - name: ゲートウェイとしての IoT Edge の使用
+      items:
+        - name: IoT Edge デバイスの階層を作成する
+          href: tutorial-nested-iot-edge.md
+    - name: エッジにおける機械学習のエンドツーエンドの例
       items:
         - name: はじめに
           href: tutorial-machine-learning-edge-01-intro.md
@@ -187,16 +193,26 @@
           href: how-to-access-built-in-metrics.md
     - name: ゲートウェイとしての IoT Edge デバイスの使用
       items:
-        - name: 透過的なゲートウェイの構成
-          href: how-to-create-transparent-gateway.md
-        - name: ダウンストリーム デバイスの認証
-          href: how-to-authenticate-downstream-device.md
-        - name: ダウンストリームのデバイスを接続する
-          href: how-to-connect-downstream-device.md
-        - name: Modbus プロトコル ゲートウェイ
-          href: deploy-modbus-gateway.md
+        - name: IoT デバイスのゲートウェイ
+          items:
+            - name: 透過的なゲートウェイの構成
+              href: how-to-create-transparent-gateway.md
+            - name: ダウンストリーム デバイスの認証
+              href: how-to-authenticate-downstream-device.md
+            - name: ダウンストリームのデバイスを接続する
+              href: how-to-connect-downstream-device.md
+            - name: Modbus プロトコル ゲートウェイ
+              href: deploy-modbus-gateway.md
+        - name: IoT Edge デバイスのゲートウェイ
+          items:
+            - name: IoT Edge デバイスのゲートウェイを構成する
+              href: how-to-connect-downstream-iot-edge-device.md
+            - name: API プロキシ モジュールを構成する
+              href: how-to-configure-api-proxy-module.md
     - name: プロキシ サポートの構成
       href: how-to-configure-proxy-support.md
+    - name: IoT Edge を使用した発行とサブスクライブ
+      href: how-to-publish-subscribe.md
     - name: IoT Edge 上の Azure Blob Storage
       items:
         - name: エッジでの BLOB ストレージについて
