--- a/articles/mysql/index.yml
+++ b/articles/mysql/index.yml
@@ -3,17 +3,17 @@ title: Azure Database for MySQL のドキュメント
 summary: Azure Database for MySQL は、MySQL Community Edition を基盤としたリレーショナル データベース サービスです。シングル サーバーまたはフレキシブル サーバー (プレビュー) を使用して Azure に MySQL データベースをホストすることができます。 フルフル マネージドのサービスとしてのデータベースであり、予測可能なパフォーマンスと動的なスケーラビリティを実現しながら、ミッションクリティカルなワークロードを処理できます。
 metadata:
   description: Azure Database for MySQL は、MySQL Community Edition を基盤として開発者向けに構築されている、Microsoft クラウドのリレーショナル データベース サービスです。 シングル サーバーまたはフレキシブル サーバー (プレビュー) を選んで Azure に MySQL データベースをデプロイすることができます。
-  author: ajlam
-  ms.author: andrela
+  author: savjani
+  ms.author: pariks
   ms.date: 09/03/2019
   ms.service: mysql
   ms.topic: landing-page
-  ms.openlocfilehash: 9ac045aac0587f7080ab7df277522674ca603040
-  ms.sourcegitcommit: d767156543e16e816fc8a0c3777f033d649ffd3c
+  ms.openlocfilehash: 82c736b3256a099aa0dbd2edca14f402a3b935be
+  ms.sourcegitcommit: 6ab718e1be2767db2605eeebe974ee9e2c07022b
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/26/2020
-  ms.locfileid: "92546298"
+  ms.lasthandoff: 11/12/2020
+  ms.locfileid: "94543036"
 landingContent:
 - title: Azure Database for MySQL について
   linkLists:
