--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -165,6 +165,8 @@
           href: etouches-tutorial.md
         - name: AwardSpring
           href: awardspring-tutorial.md
+        - name: AWS ClientVPN
+          href: aws-clientvpn-tutorial.md
         - name: Axiad Cloud
           href: axiad-cloud-tutorial.md
     - name: B
@@ -417,6 +419,8 @@
           href: costpoint-tutorial.md
         - name: Coupa
           href: coupa-tutorial.md
+        - name: Coupa Risk Assess
+          href: coupa-risk-assess-tutorial.md
         - name: CPQSync by Cincom
           href: cpqsync-by-cincom-tutorial.md
         - name: Creatio
@@ -1988,8 +1992,12 @@
           href: 15five-provisioning-tutorial.md
     - name: A - M
       items:
+        - name: Adobe Identity Management
+          href: adobe-identity-management-provisioning-tutorial.md
         - name: Airstack
           href: airstack-provisioning-tutorial.md
+        - name: AlertMedia
+          href: alertmedia-provisioning-tutorial.md
         - name: アマゾン ウェブ サービス (AWS) - ロール プロビジョニング
           href: amazon-web-service-tutorial.md#configure-azure-ad-sso
         - name: Apple Business Manager
@@ -2006,6 +2014,8 @@
           href: bitabiz-provisioning-tutorial.md
         - name: Blink
           href: blink-provisioning-tutorial.md
+        - name: BlogIn
+          href: blogin-provisioning-tutorial.md
         - name: BlueJeans
           href: bluejeans-provisioning-tutorial.md
         - name: Bonusly
@@ -2020,6 +2030,8 @@
           href: cinode-provisioning-tutorial.md
         - name: Cisco Webex
           href: cisco-webex-provisioning-tutorial.md
+        - name: Clarizen One
+          href: clarizen-one-provisioning-tutorial.md
         - name: Coda
           href: coda-provisioning-tutorial.md
         - name: Code42
@@ -2060,6 +2072,8 @@
           href: google-apps-provisioning-tutorial.md
         - name: GitHub
           href: github-provisioning-tutorial.md
+        - name: GitHub AE
+          href: github-ae-provisioning-tutorial.md
         - name: GoToMeeting
           href: citrixgotomeeting-provisioning-tutorial.md
         - name: Harness
@@ -2122,6 +2136,8 @@
           href: netsuite-provisioning-tutorial.md
         - name: OfficeSpace Software
           href: officespace-software-provisioning-tutorial.md
+        - name: OpenText Directory Services
+          href: open-text-directory-services-provisioning-tutorial.md
         - name: Oracle Cloud Infrastructure Console
           href: oracle-cloud-infratstructure-console-provisioning-tutorial.md
         - name: Oracle Fusion ERP
@@ -2192,6 +2208,8 @@
           href: teamviewer-provisioning-tutorial.md
         - name: ThousandEyes
           href: thousandeyes-provisioning-tutorial.md
+        - name: Tic-Tac Mobile
+          href: tic-tac-mobile-provisioning-tutorial.md
         - name: Templafy
           href: templafy-provisioning-tutorial.md
         - name: TheOrgWiki
