--- a/articles/attestation/index.yml
+++ b/articles/attestation/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: msmbaldwin
   ms.author: mbaldwin
   ms.date: 07/20/2020
-  ms.openlocfilehash: e5bf0981d267dca9a6ef43880d879391b837faba
-  ms.sourcegitcommit: fa90cd55e341c8201e3789df4cd8bd6fe7c809a3
+  ms.openlocfilehash: 2761767a1f3902b6b945bef3287b1cafa49a4ba6
+  ms.sourcegitcommit: 6ab718e1be2767db2605eeebe974ee9e2c07022b
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/04/2020
-  ms.locfileid: "93341792"
+  ms.lasthandoff: 11/12/2020
+  ms.locfileid: "94543240"
 landingContent:
 - title: Microsoft Azure Attestation について
   linkLists:
@@ -59,5 +59,5 @@ landingContent:
       url: faq.md
     - text: REST
       url: /rest/api/attestation/
-    - text: Azure PowerShell
-      url: /powershell/module/az.attestation/?view=azps-4.3.0#attestation
+    - text: 問題のトラブルシューティング
+      url: troubleshoot-guide.md
