--- a/articles/container-instances/TOC.yml
+++ b/articles/container-instances/TOC.yml
@@ -72,7 +72,7 @@
           href: container-instances-vnet.md
         - name: Azure Container Registry からのデプロイ
           href: container-instances-using-azure-container-registry.md
-        - name: GitHub Actions を使用したデプロイ (プレビュー)
+        - name: GitHub Actions を使用したデプロイ
           href: container-instances-github-action.md
         - name: デプロイ データの暗号化
           href: container-instances-encrypt-data.md
