--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -6,7 +6,7 @@
       href: lab-services-overview.md
 - name: クイックスタート
   items:
-    - name: はじめに
+    - name: 作業開始
       href: get-started-manage-labs.md
 - name: チュートリアル
   items:
@@ -58,6 +58,8 @@
               href: class-type-matlab.md
             - name: SolidWorks のコンピューター支援設計 (CAD)
               href: class-type-solidworks.md
+            - name: Project Lead the Way
+              href: class-type-pltw.md
         - name: Teams 内で Azure Lab Services を使用する
           items:
             - name: 概要
